# Stellar-Save

./: .editorconfig  .env.example  .gitleaks.toml  ACCESSIBILITY.md  ADMIN_API_IMPLEMENTATION.md  ANALYTICS_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  COMMUNITY_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  ENVIRONMENT.md  IMPLEMENTATION_CHECKLIST.md  METADATA_IMPLEMENTATION.md  NOTIFICATION_SERVICE_IMPLEMENTATION.md  NOTIFICATION_SERVICE_INTEGRATION.md  README.md  REMINDER_PREFERENCES_IMPLEMENTATION.md  SECRETS_ROTATION_IMPLEMENTATION.md  SECURITY.md  TESTING.md  canary.toml  codecov.yml  commitlint.config.js  package-lock.json  package.json
client/: Cargo.toml
client/src/: lib.rs
contracts/stellar-save/: Cargo.toml  GAS_OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  UPGRADE_TESTING.md  mutants.toml  tarpaulin.toml  test_metadata.sh
contracts/stellar-save/fuzz/: Cargo.toml  README.md
contracts/stellar-save/fuzz/fuzz_targets/: fuzz_contribute.rs  fuzz_create_group.rs  fuzz_join_group.rs
contracts/stellar-save/src/: auto_contribution_tests.rs  clone.rs  contribution.rs  cycle_advancement.rs  deadline.rs  error.rs  events.rs  fuzz_tests.rs  gas_benchmark.rs  gas_benchmark_tests.rs  group.rs  helpers.rs  invitation_tests.rs  lib.rs  lib.rs.bak  merge_tests.rs  migration.rs  migration_tests.rs  milestone_tests.rs  milestones.rs  multi_token_tests.rs  mutation_tests.rs  payout.rs  payout_executor.rs  penalty.rs  pool.rs  property_tests.rs  rating.rs  refund.rs  repository.rs  search.rs  security.rs  status.rs  storage.rs  storage_benchmark.rs  storage_optimization.rs  templates.rs  token.rs  upgrade_tests.rs
contracts/stellar-save/src/migrations/: mod.rs  v1_to_v2.rs
contracts/stellar-save/test_snapshots/: test_get_total_groups.1.json
contracts/stellar-save/test_snapshots/multi_token_tests/: prop_token_config_round_trip.1.json  prop_wrong_amount_rejected.1.json  test_contribute_insufficient_allowance.1.json  test_contribute_transfers_correct_token.1.json  test_contribute_wrong_amount.1.json  test_create_group_with_usdc_mock.1.json  test_two_groups_different_tokens_independent.1.json
contracts/stellar-save/test_snapshots/tests/: test_assign_payout_positions_random.1.json  test_cancel_group_already_terminal.1.json  test_emergency_withdraw_not_member.1.json  test_get_payout_not_found.1.json  (+37 more)
(+692 files in other folders)
