[package]
name = "stellar-save-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.5"
thiserror = "1.0"
tracing = "0.1"

[dependencies.stellar-core]
optional = true
version = "5.1"

[features]
default = []
stellar-core = ["dep:stellar-core"]
